--- a/src/posts/2025-01-11-hello-1.md
+++ b/src/posts/2025-01-11-hello-1.md
@@ -2,7 +2,17 @@
 title: Hello
 date: 2025-01-11T20:45:00.000Z
 ---
-This is a text with a
-footnote[^1].
 
-[^1]: And here is the definition.
+## Hello
+
+The footnote number should always be inserted after the punctuation. [^1]
+
+The footnote number should always be inserted after the punctuation.
+The footnote number should always be inserted after the punctuation.
+The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.
+
+Here is an inline note.^[Inlines notes are easier to write, since
+you don't have to pick an identifier and move down to type the
+note.]
+
+[^1]: Like that. 
