Update Posts “2025-01-11-hello-1”

--- a/src/posts/2025-01-11-hello-1.md
+++ b/src/posts/2025-01-11-hello-1.md
@@ -5,14 +5,32 @@ date: 2025-01-11T20:45:00.000Z
 
 ## Hello
 
-The footnote number should always be inserted after the punctuation. [^1]
+und Handlungen, die wir uns angewöhnt haben zu ignorieren, können wir den Menschen vielleicht die falsche Botschaft vermitteln
 
-The footnote number should always be inserted after the punctuation.
-The footnote number should always be inserted after the punctuation.
-The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.The footnote number should always be inserted after the punctuation.
+dass die Fähigkeit, große soziale und politische Veränderungen zu bewirken, nur den Reichen und
+
+wir können den Wert, die Notwendigkeit und das Potenzial stiller und privater Berufungen leugnen [^1]
+
+wir können Menschen in weltliche Formen des Einflusses drängen, aber dennoch dienen wir einem Gott, der sich um die Schwachen und [^2]
+
+der sich um die Schwachen und Verletzlichen kümmert, der sich an die Vergessenen und Ignorierten erinnert und der die Schweigenden und Unterdrückten hört
+
+Unterdrückten hört, finden die größten sozialen Erdbeben ihr unsichtbares Epizentrum an den
+
+unerwartetsten Orten
+
+eine frage, die man sich stellen sollte, ist, ob 1. samuel kapitel 1 uns einen einblick in die geschichte gibt, wie sie wirklich abläuft, wie die
+
+die Art und Weise, wie die Dinge tatsächlich umgedreht werden, auf welche Weise könnte es die Art und Weise, wie wir versuchen, in unserer Gesellschaft etwas zu bewirken, informieren und verändern
+
+in unserer Gesellschaft in 1. samuel kapitel 2 antwortet hannah
+
+
+
 
 Here is an inline note.^[Inlines notes are easier to write, since
 you don't have to pick an identifier and move down to type the
 note.]
 
 [^1]: Like that. 
+[^2]: Like this.
