Update Posts “2025-01-11-hello-1”

--- a/src/posts/2025-01-11-hello-1.md
+++ b/src/posts/2025-01-11-hello-1.md
@@ -2,35 +2,67 @@
 title: Hello
 date: 2025-01-11T20:45:00.000Z
 ---
+im ersten samuel kapitel 1 stehen nicht die korridore der macht im mittelpunkt, sondern die
 
-## Hello
+ersten Züge von Gottes großen nationalen und kosmischen Absichten in der Geschichte in der unbezeugten Intimität der häuslichen und
+
+persönlichen Kämpfen und im beharrlichen Glauben einer obskuren Person ohne politische Macht oder öffentlichen
+
+In dieser und einer Reihe anderer ähnlicher Geschichten wird den Frauen besondere Aufmerksamkeit geschenkt - der Kampf des Gebärens und der
+
+Kinderkriegen und -aufziehen wird nicht in einen weitgehend sentimentalen Privatbereich verbannt, sondern in das große Drama der
+
+die geschichten der matriarchen von israel und von frauen wie ruth und hannah werden nicht romantisiert
+
+es sind geschichten mit viel leid und unterdrückung und tapferkeit und bedeutung, aber ihre geschichten sind ausdauernd und
+
+Glaube an dunklen Orten, leise und unbesungene Siege, deren Früchte
+
+Die meisten Menschen würden die Geschichte an dem Punkt beginnen, an dem die Pflanze zum ersten Mal die Erdoberfläche durchbrach.
+
+die Oberfläche des Bodens durchbrochen hat, erzählt Gott die Geschichte so, dass sie mit dem ersten Keimen des Samens beginnt
+
+Dies sind Geschichten von unerkannten Wendepunkten im Lauf der Geschichte, nicht zuletzt, weil Gott ein Gott ist, der
+
+der sich erinnert und sich um die Menschen kümmert, die andere ignorieren Gott erhört die Gebete, die durch die persönlichen
+
+die durch die persönlichen kämpfe gläubiger frauen wie hannah ausgelöst werden, auf eine art und weise, die öffentliche und radikale soziale wendungen bewirkt
+
+die vielen biblischen berichte von frauen, die um geburten ringen und von gott erhört werden, machen das gebären zu einer
+
+eine zutiefst aktive Berufung, die einen hartnäckigen und ausdauernden Glauben erfordert, und die Häufigkeit und Prominenz dieser
+
+berichte ihre priorität in büchern wie genesis, exodus, ruth, samuel und luke
+
+macht deutlich, dass gott diese frauen trotz der verborgenheit ihrer arbeit als prominente akteure auf der bühne seiner geschichte betrachtet und ehrt
+
+Bühne seiner Geschichte betrachtet und ehrt und niemals die dramatische sozio-politische Ernte seiner Absicht von der unsichtbaren
+
+unsichtbaren Arbeit bei der Aussaat und Pflege der Saat besteht die große Gefahr, die
+
+die Bedeutung der obskuren und persönlichen Kämpfe und Siege der Gläubigen zu vernachlässigen oder zu leugnen.
+
+Siege, die sich nicht auf der großen öffentlichen Bühne der Gesellschaft und der Geschichte durchsetzen, wenn unsere Augen nach den Zeichen
+
+sozialer und politischer Umwälzungen suchen, würden wir nicht auf die Idee kommen, das gequälte Gebet einer unfruchtbaren Frau wie
+
+hannah wie eli, der hohe priester, dem es an spiritueller wahrnehmung mangelt, können wir die bedeutung von menschen und handlungen nicht erkennen
 
 und Handlungen, die wir uns angewöhnt haben zu ignorieren, können wir den Menschen vielleicht die falsche Botschaft vermitteln
 
 dass die Fähigkeit, große soziale und politische Veränderungen zu bewirken, nur den Reichen und
 
-wir können den Wert, die Notwendigkeit und das Potenzial stiller und privater Berufungen leugnen [^1]
+wir können den Wert, die Notwendigkeit und das Potenzial stiller und privater Berufungen leugnen
 
-wir können Menschen in weltliche Formen des Einflusses drängen, aber dennoch dienen wir einem Gott, der sich um die Schwachen und [^2]
+wir können Menschen in weltliche Formen des Einflusses drängen, aber dennoch dienen wir einem Gott, der sich um die Schwachen und
 
 der sich um die Schwachen und Verletzlichen kümmert, der sich an die Vergessenen und Ignorierten erinnert und der die Schweigenden und Unterdrückten hört
 
 Unterdrückten hört, finden die größten sozialen Erdbeben ihr unsichtbares Epizentrum an den
 
 unerwartetsten Orten
-
 eine frage, die man sich stellen sollte, ist, ob 1. samuel kapitel 1 uns einen einblick in die geschichte gibt, wie sie wirklich abläuft, wie die
 
 die Art und Weise, wie die Dinge tatsächlich umgedreht werden, auf welche Weise könnte es die Art und Weise, wie wir versuchen, in unserer Gesellschaft etwas zu bewirken, informieren und verändern
 
 in unserer Gesellschaft in 1. samuel kapitel 2 antwortet hannah
-
-
-
-
-Here is an inline note.^[Inlines notes are easier to write, since
-you don't have to pick an identifier and move down to type the
-note.]
-
-[^1]: Like that. 
-[^2]: Like this.
