--- a/src/posts/2025-01-11-hello-1.md
+++ b/src/posts/2025-01-11-hello-1.md
@@ -2,23 +2,9 @@
 title: Hello
 date: 2025-01-11T20:45:00.000Z
 ---
-im ersten samuel kapitel 1 stehen nicht die korridore der macht im mittelpunkt, sondern die
+Im 1 Samuel 1 stehen nicht die Korridore der Macht im Mittelpunkt, sondern die ersten Züge von Gottes großen nationalen und kosmischen Absichten in der Geschichte in der bezeugten Intimität der häuslichen und persönlichen Kämpfen und im beharrlichen Glauben einer obskuren Person ohne politische Macht oder öffentlichen.
 
-ersten Züge von Gottes großen nationalen und kosmischen Absichten in der Geschichte in der unbezeugten Intimität der häuslichen und
-
-persönlichen Kämpfen und im beharrlichen Glauben einer obskuren Person ohne politische Macht oder öffentlichen
-
-In dieser und einer Reihe anderer ähnlicher Geschichten wird den Frauen besondere Aufmerksamkeit geschenkt - der Kampf des Gebärens und der
-
-Kinderkriegen und -aufziehen wird nicht in einen weitgehend sentimentalen Privatbereich verbannt, sondern in das große Drama der
-
-die geschichten der matriarchen von israel und von frauen wie ruth und hannah werden nicht romantisiert
-
-es sind geschichten mit viel leid und unterdrückung und tapferkeit und bedeutung, aber ihre geschichten sind ausdauernd und
-
-Glaube an dunklen Orten, leise und unbesungene Siege, deren Früchte
-
-Die meisten Menschen würden die Geschichte an dem Punkt beginnen, an dem die Pflanze zum ersten Mal die Erdoberfläche durchbrach.
+In dieser und einer Reihe anderer ähnlicher Geschichten wird den Frauen besondere Aufmerksamkeit geschenkt - der Kampf des Gebärens und der Kinderkriegen und -aufziehen wird nicht in einen weitgehend sentimentalen Privatbereich verbannt, sondern in das große Drama, der die geschichten der matriarchen von israel und von frauen wie ruth und hannah werden nicht romantisiert. Es sind geschichten mit viel leid und unterdrückung und tapferkeit und bedeutung, aber ihre geschichten sind ausdauernd und Glaube an dunklen Orten, leise und unbesungene Siege, deren Früchte. Die meisten Menschen würden die Geschichte an dem Punkt beginnen, an dem die Pflanze zum ersten Mal die Erdoberfläche durchbrach.
 
 die Oberfläche des Bodens durchbrochen hat, erzählt Gott die Geschichte so, dass sie mit dem ersten Keimen des Samens beginnt
 
