Update Posts “2025-01-11-hello-1”

--- a/src/posts/2025-01-11-hello-1.md
+++ b/src/posts/2025-01-11-hello-1.md
@@ -2,23 +2,13 @@
 title: 1 Samuel 1
 date: 2025-01-11T20:45:00.000Z
 ---
-> Im 1 Samuel 1 stehen nicht die Korridore der Macht im Mittelpunkt, sondern die ersten Züge von Gottes großen nationalen und kosmischen Absichten in der Geschichte in der bezeugten Intimität der häuslichen und persönlichen **Kämpfen und im beharrlichen Glauben einer obskuren Person ohne politische Macht oder öffentlichen.**
+> Im 1 Samuel 1 stehen nicht die Korridore der Macht im Mittelpunkt, sondern die ersten Züge von Gottes großen nationalen und kosmischen Absichten in der Geschichte, in der bezeugten Intimität der häuslichen und persönlichen **Kämpfen und im beharrlichen Glauben einer obskuren Person, ohne politische Macht oder öffentlichen.**
 >
-> In dieser und einer Reihe anderer ähnlicher Geschichten wird den Frauen besondere Aufmerksamkeit geschenkt - der Kampf des Gebärens und der Kinderkriegen und -aufziehen wird nicht in einen weitgehend sentimentalen Privatbereich verbannt, sondern in das große Drama, der die geschichten der matriarchen von israel und von frauen wie ruth und hannah werden nicht romantisiert. Es sind geschichten mit viel leid und unterdrückung und tapferkeit und bedeutung, aber ihre geschichten sind ausdauernd und Glaube an dunklen Orten, leise und unbesungene Siege, deren Früchte. Die meisten Menschen würden die Geschichte an dem Punkt beginnen, an dem die Pflanze zum ersten Mal die Erdoberfläche durchbrach.
+> In dieser und einer Reihe anderer ähnlicher Geschichten wird den Frauen besondere Aufmerksamkeit geschenkt. Der Kampf des Gebärens und der Kinderkriegen und aufziehen wird **nicht in einen weitgehend sentimentalen Privatbereich verbannt**, sondern in das große Drama, der die geschichten der Matriarchen von Israel und von Frauen wie Ruth und Hannah nicht romantisiert werden. Es sind geschichten mit viel Leid und Unterdrückung und Tapferkeit und Bedeutung, aber ihre Geschichten sind Ausdauernd und Glaube an dunklen Orten, leise und unbesungene Siege, deren Früchte.
 >
-> die Oberfläche des Bodens durchbrochen hat, erzählt Gott die Geschichte so, dass sie mit dem ersten Keimen des Samens beginnt
+> Die meisten Menschen würden die Geschichte an dem Punkt beginnen, an dem die Pflanze zum ersten Mal die Erdoberfläche durchbrach. Die Oberfläche des Bodens durchbrochen hat, erzählt Gott die Geschichte so, dass sie mit dem ersten Keimen des Samens beginnt.
 >
-> Dies sind Geschichten von unerkannten Wendepunkten im Lauf der Geschichte, nicht zuletzt, weil Gott ein Gott ist, der
->
-> der sich erinnert und sich um die Menschen kümmert, die andere ignorieren Gott erhört die Gebete, die durch die persönlichen
->
-> die durch die persönlichen kämpfe gläubiger frauen wie hannah ausgelöst werden, auf eine art und weise, die öffentliche und radikale soziale wendungen bewirkt
->
-> die vielen biblischen berichte von frauen, die um geburten ringen und von gott erhört werden, machen das gebären zu einer
->
-> eine zutiefst aktive Berufung, die einen hartnäckigen und ausdauernden Glauben erfordert, und die Häufigkeit und Prominenz dieser
->
-> berichte ihre priorität in büchern wie genesis, exodus, ruth, samuel und luke
+> Dies sind Geschichten von unerkannten Wendepunkten im Lauf der Geschichte, nicht zuletzt, weil Gott ein Gott ist, der sich erinnert und sich um die Menschen kümmert, die andere ignorieren Gott erhört die Gebete, die durch die persönlichen die durch die persönlichen kämpfe gläubiger frauen wie hannah ausgelöst werden, auf eine art und weise, die öffentliche und radikale soziale wendungen bewirkt die vielen biblischen berichte von frauen, die um geburten ringen und von gott erhört werden, machen das gebären zu eine zutiefst aktive Berufung, die einen hartnäckigen und ausdauernden Glauben erfordert, und die Häufigkeit und Prominenz dieser berichte ihre priorität in büchern wie genesis, exodus, ruth, samuel und luke
 >
 > macht deutlich, dass gott diese frauen trotz der verborgenheit ihrer arbeit als prominente akteure auf der bühne seiner geschichte betrachtet und ehrt
 >
@@ -47,7 +37,9 @@ date: 2025-01-11T20:45:00.000Z
 > Unterdrückten hört, finden die größten sozialen Erdbeben ihr unsichtbares Epizentrum an den
 >
 > unerwartetsten Orten
-> eine frage, die man sich stellen sollte, ist, ob 1. samuel kapitel 1 uns einen einblick in die geschichte gibt, wie sie wirklich abläuft, wie die
+>
+>
+> Eine frage, die man sich stellen sollte, ist, ob 1. samuel kapitel 1 uns einen einblick in die geschichte gibt, wie sie wirklich abläuft, wie die
 >
 > die Art und Weise, wie die Dinge tatsächlich umgedreht werden, auf welche Weise könnte es die Art und Weise, wie wir versuchen, in unserer Gesellschaft etwas zu bewirken, informieren und verändern
 >
