--- a/src/posts/2025-01-11-hello-1.md
+++ b/src/posts/2025-01-11-hello-1.md
@@ -1,6 +1,7 @@
 ---
 title: 1 Samuel 1
 date: 2025-01-11T20:45:00.000Z
+tags: sermon
 ---
 > Im 1 Samuel 1 stehen nicht die Korridore der Macht im Mittelpunkt, sondern die ersten Züge von Gottes großen nationalen und kosmischen Absichten in der Geschichte, in der bezeugten Intimität der häuslichen und persönlichen **Kämpfen und im beharrlichen Glauben einer obskuren Person, ohne politische Macht oder öffentlichen.**
 >
